Store Filters - fix alignment of the search field

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -376,6 +376,7 @@ h5 {
             margin: 0;
             margin-left: 0;
             display: inline-block;
+            vertical-align: top;
             float: left;
             @media @tablet {
                 display: block;
@@ -392,6 +393,9 @@ h5 {
                 }
                 &:last-child {
                     margin-right: 0;
+                }
+                .btn {
+                    margin: 0;
                 }
             }
             .select {
